--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px;
+    padding: 12px 60px;
+
 
 }
 
@@ -72,8 +73,9 @@ input {
 
 .login:hover {
     background-color: #2a55e5;
-    color: #fff;
+    color: #fff;    
 }
+
 
 .login .user-icon, .cart img, .seller img, .menu{
     width: 24px;
@@ -95,12 +97,64 @@ form img, .login .user-icon, .cart img, .seller img {
 
 .menu {
     cursor: pointer;
+    /* margin-right: 50px; */
+}
+
+
+
+.categery-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 .categery {
-    width: 90%;
+    width: 97%;
     background-color: #fff;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.498);
+}
+
+.subcate {
+    /* margin: 10px; */
+    padding: 10px;
+    width: 15%;
+    margin: 10px 0px;
+}
+
+.subcate a{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
+    font-weight: 540;
+    text-align: center;
+}
+
+.subcate img {
+    width: 64px;
+    height: 64px;
+    margin: 0px 0px;
+    padding: 0px;
+}
+
+.subcate .down-arrow {
+    width: 12px;
+    height: 12px;
+    outline: none;
+    padding: 0px;
+    margin-left: 5px;
+}
+
+.subcate a span {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
