--- a/style.css
+++ b/style.css
@@ -158,3 +158,57 @@ form img, .login .user-icon, .cart img, .seller img {
     align-items: center;
     justify-content: space-around;
 }
+
+
+
+.banner-outer {
+    width: 100%;
+    height: 100%;
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-section {
+    /* background-color: green; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.banner-section .banner {
+    width: 97%;
+    height: 100%;
+}
+
+.banner img {
+    width: 100%;
+    height: auto;
+    background-size: cover;
+}
+
+.arrow-btn {
+    position: absolute;
+    width: 88px;
+    height: 40px;
+    background-color: #fff;
+    overflow: hidden;
+    text-align: center;
+    border: none;
+    outline: none;
+    border-radius: 5px 5px 0px 0px;
+}
+
+ .left-btn {
+    left: -.4%;
+    transform: rotate(90deg);
+}
+
+.right-btn {
+    right: -.4%;
+    transform: rotate(-90deg);
+}
