--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@
 
 body {
     background-color: #f1f2f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
 .nav-container {
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -19,7 +23,7 @@ nav {
     width: 100%;
     background-color: #fff;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 12px 60px;
 
@@ -211,4 +215,100 @@ form img, .login .user-icon, .cart img, .seller img {
 .right-btn {
     right: -.4%;
     transform: rotate(-90deg);
+}
+
+.section-1-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.section-1 {
+    width: 97%;
+    /* height: auto; */
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.section-1 .best-section {
+    width: 83%;
+    display: flex;
+    background-color: #fff;
+    flex-direction: column;
+    justify-content: space-between;
+    /* row-gap: 10px; */
+    /* background-color: blue; */
+    /* margin-right: 10px; */
+}
+
+.section-1 .best-section .best-title {
+    /* background-color: aqua; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #fff;
+    padding: 20px;
+    /* box-sizing: content-box; */
+}
+
+.section-1 .best-section .best-title p {
+    font-weight: 550;
+    font-size: 20px;
+}
+
+.section-1 .best-section .best-title .view-more {
+    background-color: #1c41d6;
+    border-radius: 50%;
+    width: 1rem;
+    height: 1rem;
+}
+
+.section-1 .best-section .items {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding:  0px 15px 10px;
+}
+
+.section-1 .best-section .items .item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #e0e0e0;;
+    border-radius: 4px;
+    background-color: #fff;
+    margin: 5px;
+    padding: 20px;
+}
+
+.section-1 .best-section .items .item .info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-1 .best-section .items .item img {
+    width: 100%;
+}
+
+.section-1 .side-ads {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 17%;
+    background-image: url("imges/side.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-shrink: 4;
+    background-color: #fff;
 }
