--- a/style.css
+++ b/style.css
@@ -65,6 +65,11 @@ input {
     
 }
 
+input:hover {
+    border: none;
+    outline: none;
+}
+
 .login {
     width: auto;
     height: 41px;
@@ -262,8 +267,8 @@ form img, .login .user-icon, .cart img, .seller img {
 .section-1 .best-section .best-title .view-more {
     background-color: #1c41d6;
     border-radius: 50%;
-    width: 1rem;
-    height: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .section-1 .best-section .items {
@@ -292,6 +297,17 @@ form img, .login .user-icon, .cart img, .seller img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    color: #212121;
+    font-size: 14px;
+}
+
+.section-1 .best-section .items .item .info .name {
+    font-weight: 500;
+}
+
+.section-1 .best-section .items .item .info .price {
+    font-weight: 600;
 }
 
 .section-1 .best-section .items .item img {
