--- a/style.css
+++ b/style.css
@@ -65,10 +65,6 @@ input {
     
 }
 
-input:hover {
-    border: none;
-    outline: none;
-}
 
 .login {
     width: auto;
@@ -238,7 +234,7 @@ form img, .login .user-icon, .cart img, .seller img {
     gap: 15px;
 }
 
-.section-1 .best-section {
+.section {
     width: 83%;
     display: flex;
     background-color: #fff;
@@ -249,7 +245,7 @@ form img, .login .user-icon, .cart img, .seller img {
     /* margin-right: 10px; */
 }
 
-.section-1 .best-section .best-title {
+.section .title {
     /* background-color: aqua; */
     display: flex;
     flex-direction: row;
@@ -259,19 +255,19 @@ form img, .login .user-icon, .cart img, .seller img {
     /* box-sizing: content-box; */
 }
 
-.section-1 .best-section .best-title p {
+.section .title p {
     font-weight: 550;
     font-size: 20px;
 }
 
-.section-1 .best-section .best-title .view-more {
+.section .title .view-more {
     background-color: #1c41d6;
     border-radius: 50%;
     width: 1.5rem;
     height: 1.5rem;
 }
 
-.section-1 .best-section .items {
+.section .items {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -279,7 +275,7 @@ form img, .login .user-icon, .cart img, .seller img {
     padding:  0px 15px 10px;
 }
 
-.section-1 .best-section .items .item {
+.section .items .item {
     width: 100%;
     height: 100%;
     display: flex;
@@ -293,28 +289,30 @@ form img, .login .user-icon, .cart img, .seller img {
     padding: 20px;
 }
 
-.section-1 .best-section .items .item .info {
+.section .items .item .info {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     color: #212121;
     font-size: 14px;
+    /* margin-top: 5px; */
 }
 
-.section-1 .best-section .items .item .info .name {
+.section .items .item .info .name {
     font-weight: 500;
 }
 
-.section-1 .best-section .items .item .info .price {
+.section .items .item .info .price {
     font-weight: 600;
 }
 
-.section-1 .best-section .items .item img {
+.section .items .item img {
     width: 100%;
 }
 
-.section-1 .side-ads {
+
+.side-ads {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -327,4 +325,37 @@ form img, .login .user-icon, .cart img, .seller img {
     justify-content: center;
     flex-shrink: 4;
     background-color: #fff;
+}
+
+
+
+
+
+
+.section-2 {
+    width: 97%;
+    margin-top: 15px;
+}
+
+.section-2 .items .item {
+    height: 300px;
+}
+
+.section-2 .items .item .info {
+    font-size: 14px;
+}
+
+.section-2 .items .item .img {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
+
+.section-2 .items .item .img img {
+    width: 100%;
+    height: auto;
+    background-size: cover;
 }
