--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto-Medium,Droid Sans,HelveticaNeue-Medium,Helvetica Neue Medium,Arial,Lucida Grande,sans-serif;
+
 }
 
 body {
@@ -17,6 +18,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
+    /* position: static; */
 }
 
 nav {
@@ -112,6 +114,7 @@ form img, .login .user-icon, .cart img, .seller img {
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    
 }
 
 .categery {
@@ -121,6 +124,7 @@ form img, .login .user-icon, .cart img, .seller img {
     justify-content: space-evenly;
     align-items: center;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.498);
+    text-align: center;
 }
 
 .subcate {
@@ -173,6 +177,7 @@ form img, .login .user-icon, .cart img, .seller img {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .banner-section {
@@ -224,6 +229,7 @@ form img, .login .user-icon, .cart img, .seller img {
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+    text-align: center;
 }
 
 .section-1 {
@@ -335,6 +341,7 @@ form img, .login .user-icon, .cart img, .seller img {
 .section-2 {
     width: 97%;
     margin-top: 15px;
+    text-align: center;
 }
 
 .section-2 .items .item {
@@ -358,4 +365,59 @@ form img, .login .user-icon, .cart img, .seller img {
     width: 100%;
     height: auto;
     background-size: cover;
+}
+
+
+
+footer{
+    width: 100%;
+    background-color: #212121;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    align-items: center;
+    margin-top: 15px;
+    padding: 10px 10px;
+    text-align: center;
+}
+
+
+footer .footer-1 {
+    width: 97%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+    /* gap: 3rem; */
+    line-height: 20px;
+    margin-top: 20px;
+}
+
+footer ul {
+    list-style: none;
+}
+
+
+footer li {
+    text-align: left;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+footer .box-title{
+    color: #878787;
+    margin: 5px 0px;
+    font-weight: 300;
+}
+
+footer ul li img {
+    margin: 0px 5px;
+}
+
+footer .box-5{
+    border: 1px solid transparent;
+    border-left-color: #3c424e;
+    padding-left: 40px;
+
 }
